# RuFetch

./: CHANGELOG.md  COPYING  Cargo.toml  README.md
.circleci/: config.yaml  config.yml
.github/workflows/: rust.yml
src/: conf.rs  fetch.rs  main.rs  types.rs
