[package]
name = "rufetch"
description = "Simple Fetch written in Rust. Continued version of ru_fetch"
repository = "https://github.com/SupremeDeity08/RuFetch"
license = "GPL-3.0"
version = "0.2.5"
authors = ["SupremeDeity08"]
keywords = ["fetch", "info", "system", "linux", "windows"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.26.2"
ansi_term = "0.12.1"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
dirs = "4.0.0"
